--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
 	
-	<title>Featured Game</title>
+	<title>Chess Music</title>
+
+  <link rel="icon" href="img/chesspieces/wikipedia/bK.png">
 
   <style type="text/css">
 
