--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
     .moves {
       width: 99%;
       background-color: #fff;
-      border: .1rem solid #e8e7e6;
+      border-top: .5rem solid #e8e7e6;
+      border-left: .2rem solid #e8e7e6;
+      border-right: .2rem solid #e8e7e6;
+      border-bottom: .2rem solid #e8e7e6;
     }
 
     .column {
