--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <span id="gameNumber"></span>
       <button id="nextGame">>></button>
     </div>
-    <p>This app was built with node.js, jQuery, <a href="">chess.js</a>, <a href="">chessboard.js</a>, and <a href="">stockfish.js</a> (powered by the open-source chess engine <a href="">Stockfish</a>) and uses the <a href="">Chess.com Public API</a>.  The music was obtained royalty-free through <a href="">Dripchord</a> and was composed by the user SKI.</p>
+    <p>This app was built with node.js, jQuery, <a href="https://github.com/jhlywa/chess.js">chess.js</a>, <a href="chessboardjs.com">chessboard.js</a>, and <a href="https://github.com/nmrugg/stockfish.js/">stockfish.js</a> (powered by the open-source chess engine <a href="stockfishchess.org">Stockfish</a>) and uses the <a href="https://www.chess.com/news/view/published-data-api">Chess.com Public API</a>.  The music was obtained royalty-free through <a href="dripchord.com">Dripchord</a> and was composed by the user SKI.</p>
     <p id="evals"></p>
     <div id="printout"></div>
   </div>
