--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div class="column">
     <div id="heading">
       <h1 style="text-align: center;">Music for Your Chess Games!</h1>
-      <h4>Fetch games from any <a href="chess.com">Chess.com</a> user's archive and review them with a musical narration that adjusts to the current context of the game.</h4>
+      <h4>Fetch games from any <a href="https://chess.com">Chess.com</a> user's archive and review them with a musical narration that adjusts to the current context of the game.</h4>
     </div>
     <div id="form" style="text-align: center;">
       <label for="username">Chess.com username:</label>
@@ -167,7 +167,7 @@
       <span id="gameNumber"></span>
       <button id="nextGame">>></button>
     </div>
-    <p>This app was built with node.js, jQuery, <a href="https://github.com/jhlywa/chess.js">chess.js</a>, <a href="chessboardjs.com">chessboard.js</a>, and <a href="https://github.com/nmrugg/stockfish.js/">stockfish.js</a> (powered by the open-source chess engine <a href="stockfishchess.org">Stockfish</a>) and uses the <a href="https://www.chess.com/news/view/published-data-api">Chess.com Public API</a>.  The music was obtained royalty-free through <a href="dripchord.com">Dripchord</a> and was composed by the user SKI.</p>
+    <p>This app was built with node.js, jQuery, <a href="https://github.com/jhlywa/chess.js">chess.js</a>, <a href="http://chessboardjs.com">chessboard.js</a>, and <a href="https://github.com/nmrugg/stockfish.js/">stockfish.js</a> (powered by the open-source chess engine <a href="https://stockfishchess.org">Stockfish</a>) and uses the <a href="https://www.chess.com/news/view/published-data-api">Chess.com Public API</a>.  The music was obtained royalty-free through <a href="https://dripchord.com">Dripchord</a> and was composed by the user SKI.</p>
     <p id="evals"></p>
     <div id="printout"></div>
   </div>
