--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
   </style>
 
+  <!-- music elements -->
+  <script src="node_modules/midiplayer.js"></script>
+  <script src="node_modules/soundfont-player.min.js"></script>
   <script src="music.js"></script>
 
   <!-- chess.js package -->
@@ -131,7 +134,8 @@
     </div>
     <div id="form" style="text-align: center;">
       <label for="username">Chess.com username:</label>
-      <input type="text" id="username" name="username" value="ChemStud24">
+      <!-- <input type="text" id="username" name="username" value="ChemStud24"> -->
+      <input type="text" id="username" name="username" value="">
       <label for="month">Month:</label>
       <select id="month" name="month">
         <option value="01">January</option>
