--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
         <option value="2019">2019</option>
         <option value="2020">2020</option>
       </select>
-      <input type="button" id="updateBtn" name="update" value="Update">
+    </div>
+    <div style="text-align: center;">
+      <input type="button" id="updateBtn" name="update" value="Fetch Games" style="height: 3rem;">
     </div>
     <div style="text-align: center;">
       <button id="prevGame"><<</button>
