--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </select>
     </div>
     <div style="text-align: center;">
-      <input type="button" id="updateBtn" name="update" value="Fetch Games" style="height: 3rem;">
+      <input type="button" id="updateBtn" name="update" value="Fetch Games" style="height: 2rem; width: 10rem;">
     </div>
     <div style="text-align: center;">
       <button id="prevGame"><<</button>
