--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <option value="2020">2020</option>
       </select>
     </div>
-    <div style="text-align: center;">
+    <div style="text-align: center; margin-bottom: 0.5rem; margin-top: 0.5rem;">
       <input type="button" id="updateBtn" name="update" value="Fetch Games" style="height: 2rem; width: 10rem;">
     </div>
     <div style="text-align: center;">
